--- a/html/Profiel.html
+++ b/html/Profiel.html
@@ -44,9 +44,10 @@
 
      <footer class="nav">
         <ul>
-            <li><a href="#"> <img src="/img/Placeholder.jpg" /></a></li>
-            <li><a href="#"><img src="/img/Placeholder.jpg" /></a></li>
-            <li><a href="#"><img src="/img/Placeholder.jpg" /></a></li>
+            <li><a href="#"> <img src="/img/icon/home.svg" /></a></li>
+            <li><a href="#"><img src="/img/icon/calendar.svg" /></a></li>
+            <li><a href="#"><img src="/img/icon/search.svg" /></a></li>
+            <li><a href="#"><img src="/img/icon/user.svg" /></a></li>
         </ul>
     </footer>
 
