--- a/html/Event_Detailpage.html
+++ b/html/Event_Detailpage.html
@@ -16,18 +16,23 @@
     <!--    hier terug-knopje-->
     <h2>Details</h2></header>
   <main>
-    <h1 class="event_header">BottleMania @ Anderlecht Brewery</h1>
+    <!--    class="event_header"-->
+<!--    <h1 id="naam">BottleMania @ Anderlecht Brewery</h1>-->
+    <div class="profielFoto">
+        <img id="foto" src="/img/Placeholder.jpg" />
+        <h1 id="naam">BottleMania @ Anderlecht Brewery</h1>
+    </div>
+    
+    
+    <!--      hier ook company_profile_photo?-->
+    <!--      dit is dat maps icoontje--><a class="location_link" href="#"><i class="material-icons">location_on</i></a>
     <section class="company_info">
-      <!--      hier ook company_profile_photo?-->
-<!--      dit is dat maps icoontje-->
-      <a class="location_link" href="#"><i class="material-icons">location_on</i></a>
-      <section class="company_info">
       <p class="company_name_event">Anderlecht Brewery</p>
       <p>Nijverheidskaai 01 3000 Brussel</p>
-      <p><a href="mailto:info@kittybons.com">contact</a></p></section>
+      <p><a href="mailto:info@kittybons.com">contact</a></p>
     </section>
     <section class="connect_users">
-      <p> (aantal subscribers)</p> <a class="subscribe_button" href="#"><i class="material-icons">favorite</i></a> </section>
+      <p> (#subs)</p> <a class="subscribe_button" href="#"><i class="material-icons">favorite</i></a> </section>
     <section class="event_date">
       <p>25 juni 2017</p>
       <p>13:00 tot 16:00</p>
@@ -35,35 +40,36 @@
     <section class="event_description">Help us bottle the first batch of AnderBier. An amazing afternoon with theatre for kids and beer and lemonade for the adults. </section>
     <!--    dit wordt accordeon-menu van het event-->
     <section class="content_accordion">
-    <button class="accordion">Reviews from previous events</button>
-    <div class="panel">
-      <p>inhoud van het vouw-menu</p>
-    </div>
-    <button class="accordion">Other events</button>
-    <div class="panel">
-      <div class="example_item">
-        <div class="example_item_date">25 may 2017 </div>
-        <div class="example_item_title">BierGarten Brussels</div>
-        <div class="example_item_description">A wonderful friday night at the gardens of Anderlecht. Beer and bratwurst, jawohl.</div>
+      <button class="accordion">Reviews from previous events</button>
+      <div class="panel">
+        <p>inhoud van het vouw-menu</p>
       </div>
-      <div class="example_item">
-        <div class="example_item_date">25 june 2017 </div>
-        <div class="example_item_title">BottleMania </div>
-        <div class="example_item_description">Help us bottle the first batch of AnderBier. An amazing afternoon with theatre for kids and beer and lemonade for the adults.</div>
+      <button class="accordion">Other events</button>
+      <div class="panel">
+        <div class="example_item">
+          <div class="example_item_date">25 may 2017 </div>
+          <div class="example_item_title">BierGarten Brussels</div>
+          <div class="example_item_description">A wonderful friday night at the gardens of Anderlecht. Beer and bratwurst, jawohl.</div>
+        </div>
+        <div class="example_item">
+          <div class="example_item_date">25 june 2017 </div>
+          <div class="example_item_title">BottleMania </div>
+          <div class="example_item_description">Help us bottle the first batch of AnderBier. An amazing afternoon with theatre for kids and beer and lemonade for the adults.</div>
+        </div>
       </div>
-    </div>
-    <button class="accordion">Related products</button>
-    <div class="panel">
-      <p>inhoud van het vouw-menu</p>
-    </div>
-    <button class="accordion"> Jobs at this start-up</button>
-    <div class="panel">
-      <p>inhoud van het vouw-menu</p>
-    </div>
-    <button class="accordion">Other start-ups in the neighbourhood</button>
-    <div class="panel">
-      <p>inhoud van het vouw-menu</p>
-    </div></section>
+      <button class="accordion">Related products</button>
+      <div class="panel">
+        <p>inhoud van het vouw-menu</p>
+      </div>
+      <button class="accordion"> Jobs at this start-up</button>
+      <div class="panel">
+        <p>inhoud van het vouw-menu</p>
+      </div>
+      <button class="accordion">Other start-ups in the neighbourhood</button>
+      <div class="panel">
+        <p>inhoud van het vouw-menu</p>
+      </div>
+    </section>
   </main>
   <footer class="nav">
     <ul>
