--- a/html/SearchPage.html
+++ b/html/SearchPage.html
@@ -51,13 +51,16 @@
   <footer class="nav">
     <ul>
       <li>
-        <a href="#"> <img src="../img/Placeholder.jpg" /></a>
+        <a href="../html/home.html"> <img src="/img/icon/home.svg" /></a>
       </li>
       <li>
-        <a href="#"><img src="../img/Placeholder.jpg" /></a>
+        <a href=""><img src="/img/icon/calendar.svg" /></a>
       </li>
       <li>
-        <a href="#"><img src="../img/Placeholder.jpg" /></a>
+        <a href="../html/SearchPage.html"><img src="/img/icon/search.svg" /></a>
+      </li>
+      <li>
+        <a href="../html/profielLogIn.html"><img src="/img/icon/user.svg" /></a>
       </li>
     </ul>
   </footer>
