--- a/html/home.html
+++ b/html/home.html
@@ -34,13 +34,16 @@
     <footer class="nav">
         <ul>
             <li>
-                <a href="#"> <img src="/img/Placeholder.jpg" /></a>
+                <a href="#"> <img src="/img/icon/home.svg" /></a>
             </li>
             <li>
-                <a href="#"><img src="/img/Placeholder.jpg" /></a>
+                <a href="#"><img src="/img/icon/calendar.svg" /></a>
             </li>
             <li>
-                <a href="#"><img src="/img/Placeholder.jpg" /></a>
+                <a href="#"><img src="/img/icon/search.svg" /></a>
+            </li>
+            <li>
+                <a href="#"><img src="/img/icon/user.svg" /></a>
             </li>
         </ul>
     </footer>
