--- a/html/Event_Detailpage.html
+++ b/html/Event_Detailpage.html
@@ -25,7 +25,8 @@
     
     
     <!--      hier ook company_profile_photo?-->
-    <!--      dit is dat maps icoontje--><a class="location_link" href="#"><i class="material-icons">location_on</i></a>
+    <!--      dit is dat maps icoontje-->
+    <a class="location_link" href="#"><i class="material-icons">location_on</i></a>
     <section class="company_info">
       <p class="company_name_event">Anderlecht Brewery</p>
       <p>Nijverheidskaai 01 3000 Brussel</p>
@@ -34,6 +35,7 @@
     <section class="connect_users">
       <p> (#subs)</p> <a class="subscribe_button" href="#"><i class="material-icons">favorite</i></a> </section>
     <section class="event_date">
+      <a class="calendar_link" href="#"><i class="material-icons">event</i></a>
       <p>25 juni 2017</p>
       <p>13:00 tot 16:00</p>
     </section>
