--- a/html/SearchPage.html
+++ b/html/SearchPage.html
@@ -39,12 +39,12 @@
     <section>
       <h1>Filters</h1>
       <ul>
-        <li onclick="ToggleFilters(event)" id="notToggled"> <span class="before"></span>Food &amp; Drinks</li>
-        <li onclick="ToggleFilters(event)" id="notToggled"><span class="before"></span>Beauty</li>
-        <li onclick="ToggleFilters(event)" id="notToggled"><span class="before"></span>Social initiatives</li>
-        <li onclick="ToggleFilters(event)" id="notToggled"><span class="before"></span> Clothing &amp; accessories</li>
-        <li onclick="ToggleFilters(event)" id="notToggled"><span class="before"></span>DIY</li>
-        <li onclick="ToggleFilters(event)" id="notToggled"><span class="before"></span>Hobbies</li>
+        <li class="Filter" onclick="ToggleFilters(event)" id="notToggled"> <span class="before"></span>Food &amp; Drinks</li>
+        <li class="Filter" onclick="ToggleFilters(event)" id="notToggled"><span class="before"></span>Beauty</li>
+        <li class="Filter" onclick="ToggleFilters(event)" id="notToggled"><span class="before"></span>Social initiatives</li>
+        <li class="Filter" onclick="ToggleFilters(event)" id="notToggled"><span class="before"></span> Clothing &amp; accessories</li>
+        <li class="Filter" onclick="ToggleFilters(event)" id="notToggled"><span class="before"></span>DIY</li>
+        <li class="Filter" onclick="ToggleFilters(event)" id="notToggled"><span class="before"></span>Hobbies</li>
       </ul>
     </section>
   </main>
