--- a/html/Company_Profile.html
+++ b/html/Company_Profile.html
@@ -44,12 +44,12 @@
     </div>
     <button class="accordion">Jobs</button>
     <div class="panel">
-      <div class="example_item">
-        <div class="example_item_date">xxx </div>
+      <div class="example_item clearfix">
+        <div class="example_item_date"> <span class="example_item_title_on_image">xxx</span></div>
         <div class="example_item_title">BottleMaster </div>
         <div class="example_item_description">Help us bottle the first batch of AnderBier. You'll be responsible for coordinating and instructing the bottlers.</div>
       </div>
-      <div class="example_item">
+      <div class="example_item clearfix">
         <div class="example_item_date"> xxx </div>
         <div class="example_item_title">BeerTaster m/v/x </div>
         <div class="example_item_description">A nose for the best flavors in town? Help us select the best recipes and earn your weight in beer.</div>
