--- a/html/SearchPage.html
+++ b/html/SearchPage.html
@@ -39,13 +39,14 @@
     <section>
       <h1>Filters</h1>
       <ul>
-        <li class="Filter" onclick="ToggleFilters(event)" id="notToggled"> <span class="before"></span>Food &amp; Drinks</li>
-        <li class="Filter" onclick="ToggleFilters(event)" id="notToggled"><span class="before"></span>Beauty</li>
-        <li class="Filter" onclick="ToggleFilters(event)" id="notToggled"><span class="before"></span>Social initiatives</li>
-        <li class="Filter" onclick="ToggleFilters(event)" id="notToggled"><span class="before"></span> Clothing &amp; accessories</li>
-        <li class="Filter" onclick="ToggleFilters(event)" id="notToggled"><span class="before"></span>DIY</li>
-        <li class="Filter" onclick="ToggleFilters(event)" id="notToggled"><span class="before"></span>Hobbies</li>
+        <li class="notToggled" onclick="ToggleFilters(event)"> <span class="before"></span>Food &amp; Drinks</li>
+        <li class="notToggled" onclick="ToggleFilters(event)"><span class="before"></span>Beauty</li>
+        <li class="notToggled" onclick="ToggleFilters(event)"><span class="before"></span>Social initiatives</li>
+        <li class="notToggled" onclick="ToggleFilters(event)"><span class="before"></span> Clothing &amp; accessories</li>
+        <li class="notToggled" onclick="ToggleFilters(event)" id="notToggled"><span class="before"></span>DIY</li>
+        <li class="notToggled" onclick="ToggleFilters(event)"><span class="before"></span>Hobbies</li>
       </ul>
+      <button onclick="genereerLijstMetBedrijven()">Zoek</button>
     </section>
   </main>
   <footer class="nav">
