--- a/html/Profiel.html
+++ b/html/Profiel.html
@@ -35,6 +35,8 @@
             <li><a href="#">Favourites</a></li>
             <hr>
             <li><a href="#">Settings</a></li>
+            <hr>
+            <li><a href="/html/profielLogIn.html">Afmelden</a></li>
             <br>
         </ul>
     </div>
