--- a/html/home.html
+++ b/html/home.html
@@ -13,13 +13,13 @@
 
 <body>
     <div class="topofnav">
-        <img src="/img/placeholder.jpg" class="jaqueslogo">
+        <img src="img/placeholder.jpg" class="jaqueslogo">
         <h1>The start of our community</h1>
         <nav>
             <ul>
-                <li>Jobs</li>
-                <li>Events</li>
-                <li>Tools</li>
+                <li class="nav_jobs">Jobs</li>
+                <li class="nav_events">Events</li>
+                <li class="nav_tools">Tools</li>
             </ul>
         </nav>
     </div>
