--- a/html/kalender.html
+++ b/html/kalender.html
@@ -1,35 +1,17 @@
+<!DOCTYPE html>
 <html>
-
-<head>
-    <link rel="stylesheet" href="../css/reset.css">
-    <link rel="stylesheet" href="../css/style.css">
-    <link rel="stylesheet" href="../css/kalender.css">
-    <script src="jquery-3.2.0.min.js"></script>
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.0/jquery.min.js"></script>
-    <script src="js/scriptHomepage.js"></script>
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,700" rel="stylesheet">
-</head>
-
-<header>
-    <h1>Calendar</h1>
-</header>
-
-<body>
-    <footer class="nav">
-        <ul>
-            <li>
-                <a href="#"> <img src="/img/Placeholder.jpg" /></a>
-            </li>
-            <li>
-                <a href="#"><img src="/img/Placeholder.jpg" /></a>
-            </li>
-            <li>
-                <a href="#"><img src="/img/Placeholder.jpg" /></a>
-            </li>
-        </ul>
-    </footer>
-
-</body>
-
+    <head>
+        <title>Calendar</title>
+        <link type="text/css" rel="stylesheet" href="../css/kalender.css">
+        <script type="text/javascript" src="../js/kalender.js"></script>
+    </head>
+    <body>
+        <div id="calendar-container">
+            <div id="calendar-header">
+                <span id="calendar-month-year"></span>
+            </div>
+            <div id="calendar-dates">
+            </div>
+        </div>
+    </body>
 </html>
