--- a/html/home.html
+++ b/html/home.html
@@ -19,11 +19,11 @@
         <h1> The start of our community
                 </h1>
         <div class="doctorswithoutborders">
-            <button id="jobs"> Jobs
+            <button id="jobs"> Startups
             </button>
             <button id="events"> Events
             </button>
-            <button id="tools"> Tools
+            <button id="tools"> Offers
             </button>
         </div>
     </div>
