fixed event page

--- a/html/Company_Profile.html
+++ b/html/Company_Profile.html
@@ -29,14 +29,15 @@
     
     <section class="connect_users"><p> (#subs)</p> <a class="subscribe_button" href="#"><i class="material-icons">favorite</i></a></section>
     <!--    deze buttons worden accordeon-menu van het bedrijf, en panels zijn inhoud via w3schools-->
+    <section class="content_accordion"> 
     <button class="accordion">Events</button>
     <div class="panel">
-        <div class="example_item">
+        <div class="example_item clearfix">
         <div class="example_item_date">25 may 2017 </div>
         <div class="example_item_title">BierGarten Brussels</div>
         <div class="example_item_description">A wonderful friday night at the gardens of Anderlecht. Beer and bratwurst, jawohl.</div>
       </div>
-      <div class="example_item">
+      <div class="example_item clearfix">
         <div class="example_item_date">25 june 2017 </div>
         <div class="example_item_title">BottleMania </div>
         <div class="example_item_description">Help us bottle the first batch of AnderBier. An amazing afternoon with theatre for kids and beer and lemonade for the adults.</div>
@@ -65,7 +66,7 @@
     </div>
     <button class="accordion">Reviews</button>
     <div class="panel">
-      <div class="example_item">
+      <div class="example_item clearfix">
         <div class="example_item_date">xxx </div>
         <div class="example_item_title">Fantastic organisation! </div>
         <div class="example_item_description">Really enjoyed our day at Anderlecht Brewers. The lady knew so much about beers, an expert in her field. </div>
@@ -78,7 +79,7 @@
     <button class="accordion"></button>
     <div class="panel">
       <p>inhoud van het vouw-menu</p>
-    </div>
+      </div></section>
   </main>
   <footer class="nav">
     <ul>
