Links in FOOTER zie company page

--- a/html/Event_Detailpage.html
+++ b/html/Event_Detailpage.html
@@ -71,19 +71,11 @@
   </main>
   <footer class="nav">
     <ul>
-      <li>
-        <a href="#"> <img src="/img/icon/home.svg" /></a>
-      </li>
-      <li>
-        <a href="#"><img src="/img/icon/calendar.svg" /></a>
-      </li>
-      <li>
-        <a href="#"><img src="/img/icon/search.svg" /></a>
-      </li>
-      <li>
-        <a href="#"><img src="/img/icon/user.svg" /></a>
-      </li>
-    </ul>
+            <li><a href="../html/index.html"> <img src="/img/icon/home.svg" /></a></li>
+            <li><a href="../html/kalender.html"><img src="/img/icon/calendar.svg" /></a></li>
+            <li><a href="../html/SearchPage.html"><img src="/img/icon/search.svg" /></a></li>
+            <li><a href="../html/profielLogIn.html"><img src="/img/icon/user.svg" /></a></li>
+        </ul>
   </footer>
   <script src="../js/accordion_menu_company.js"></script>
 </body>
