--- a/html/Company_Profile.html
+++ b/html/Company_Profile.html
@@ -4,6 +4,7 @@
 <head>
   <link rel="stylesheet" href="../css/company_event.css">
   <link rel="stylesheet" href="../css/style.css">
+  <link rel="stylesheet" href="../css/profielLogIn.css">
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial- scale=1, minimum-scale=1">
   <title> Company Name Here | App Name Here</title>
@@ -16,7 +17,8 @@
 <body>
   <header>
     <!--    TO DO ----------------------     hier terug-knopje---------->
-    <h2>Details</h2></header>
+    <h2>Details</h2>
+  </header>
   <main>
     <div class="profielFoto"> <img id="foto" src="/img/Placeholder.jpg" />
       <h1 id="naam">Anderlecht Brewery</h1> </div>
