ik hoop voor u da het werkt

--- a/html/SearchPage.html
+++ b/html/SearchPage.html
@@ -14,8 +14,8 @@
 </head>
 
 <body>
-  <section>
-    <input type="text" onkeyup="zoekWaardeVeranderen()" placeholder="Search" id="search"> </section>
+  <header>
+    <input type="text" onkeyup="zoekWaardeVeranderen()" onkeydown="FilterFunctie()" placeholder="Search" id="search"> <img src="../img/icon/equalizer2.svg"> </header>
   <!--_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-->
   <main id="content">
     <h1>Interesting venues</h1>
