pijltje werkt nog niet volledig

--- a/html/Event_Detailpage.html
+++ b/html/Event_Detailpage.html
@@ -17,7 +17,7 @@
   <header>
     <!--    hier nog terug-knopje plaatsten-->
     
-    <h2> <a href="#"> &nbsp; &lang; &nbsp;</a>Details</h2></header>
+    <h2> <a href="#" onclick="history.go(-1)"> &nbsp; &lang; &nbsp;</a>Details</h2></header>
   <main>
     <div class="profielFoto"> <img id="foto" src="/img/Placeholder.jpg" />
       <h1 id="naam">BottleMania @ Anderlecht Brewery</h1> </div>
