--- a/html/profielLogIn.html
+++ b/html/profielLogIn.html
@@ -49,13 +49,12 @@
      
  </div>
 
- 
  <footer class="nav">
         <ul>
-            <li><a href="#"> <img src="/img/icon/home.svg" /></a></li>
-            <li><a href="#"><img src="/img/icon/calendar.svg" /></a></li>
-            <li><a href="#"><img src="/img/icon/search.svg" /></a></li>
-            <li><a href="#"><img src="/img/icon/user.svg" /></a></li>
+            <li><a href="../html/index.html"> <img src="/img/icon/home.svg" /></a></li>
+            <li><a href="../html/calendar.html"><img src="/img/icon/calendar.svg" /></a></li>
+            <li><a href="../html/SearchPage.html"><img src="/img/icon/search.svg" /></a></li>
+            <li><a href="../html/profielLogIn.html"><img src="/img/icon/user.svg" /></a></li>
         </ul>
     </footer>
   
