--- a/html/Company_Profile.html
+++ b/html/Company_Profile.html
@@ -131,7 +131,7 @@
  <footer class="nav">
         <ul>
             <li><a href="../html/index.html"> <img src="/img/icon/home.svg" /></a></li>
-            <li><a href="../html/kalender.html"><img src="/img/icon/calendar.svg" /></a></li>
+            <li><a href="../html/calendar.html"><img src="/img/icon/calendar.svg" /></a></li>
             <li><a href="../html/SearchPage.html"><img src="/img/icon/search.svg" /></a></li>
             <li><a href="../html/profielLogIn.html"><img src="/img/icon/user.svg" /></a></li>
         </ul>
