--- a/calendar.html
+++ b/calendar.html
@@ -7,7 +7,7 @@
   <link rel="stylesheet" href="css/style.css">
   <link rel="stylesheet" href="css/calendar.css">
  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
-  <script src="../js/calender.js"></script>
+  <script src="js/calender.js"></script>
     
 </head>
 
@@ -50,10 +50,10 @@
 <footer class="nav">
          <ul>
 
-            <li><a href="../html/index.html"> <img src="/img/icon/home.svg" /></a></li>
-            <li><a href="../html/calendar.html"><img src="/img/icon/calendar.svg" /></a></li>
-            <li><a href="../html/SearchPage.html"><img src="/img/icon/search.svg" /></a></li>
-            <li><a href="../html/profielLogIn.html"><img src="/img/icon/user.svg" /></a></li>
+            <li><a href="html/home.html"> <img src="/img/icon/home.svg" /></a></li>
+            <li><a href="calendar.html"><img src="/img/icon/calendar.svg" /></a></li>
+            <li><a href="html/SearchPage.html"><img src="/img/icon/search.svg" /></a></li>
+            <li><a href="html/profielLogIn.html"><img src="/img/icon/user.svg" /></a></li>
          </ul>
      </footer>
      
