--- a/html/Event_Detailpage.html
+++ b/html/Event_Detailpage.html
@@ -11,6 +11,7 @@
   <!--  dit is het icon font via google: ------>
   <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
   <title> Event Name Here | App Name Here</title>
+  <script src="jquery-3.2.1.js"></script>
   <script>
     function goBack() {
       window.history.back()
