--- a/html/Event_Detailpage.html
+++ b/html/Event_Detailpage.html
@@ -11,7 +11,7 @@
   <!--  dit is het icon font via google: ------>
   <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
   <title> Event Name Here | App Name Here</title>
-  <script src="jquery-3.2.1.js"></script>
+  <script src="../js/jquery-3.2.1.js"></script>
   <script>
     function goBack() {
       window.history.back()
@@ -21,7 +21,7 @@
 
 <body>
   <header>
-    <input type="button" value="&nbsp; &lang; &nbsp;" onclick="goBack()"><h2>Details</h2></header>
+    <input type="button" value="&nbsp; &lang;" onclick="goBack()"><h2>Details</h2></header>
   <main>
     <div class="profielFoto"> 
       <h1 id="naam_company">BottleMania </h1> </div>
