--- a/html/Company_Profile.html
+++ b/html/Company_Profile.html
@@ -16,12 +16,12 @@
       window.history.back()
     }
   </script>
-  <script src="jquery-3.2.1.js"></script>
+  <script src="../js/jquery-3.2.1.js"></script>
 </head>
 
 <body>
   <header>
-    <input type="button" value="&nbsp; &lang; &nbsp;" onclick="goBack()">
+    <input type="button" value="&nbsp; &lang;" onclick="goBack()">
     <h2>Details</h2> </header>
   <main>
     <div class="profielFoto">
@@ -33,8 +33,9 @@
         <p>3000 Brussel</p>
         <p><a href="mailto:info@kittybons.com">contact</a></p>
       </div>
-      <div class="connect_users">
-        <p> (#subs)</p> <a class="subscribe_button icon_link" href="#"><i class="material-icons">favorite</i></a> </div>
+      <div class="connect_users"> <a class="subscribe_button icon_link" href="#"><i class="material-icons">favorite</i></a>
+        <p>(#subs)</p>
+      </div>
     </div>
     <!--    deze buttons worden accordeon-menu en panel = inhoud --------------->
     <section class="content_accordion">
