--- a/html/Event_Detailpage.html
+++ b/html/Event_Detailpage.html
@@ -12,6 +12,7 @@
   <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
   <title> Event Name Here | App Name Here</title>
   <script src="../js/jquery-3.2.1.js"></script>
+  <script src="../js/buttons_subscribe.js"></script>
   <script>
     function goBack() {
       window.history.back()
@@ -122,8 +123,6 @@
     </ul>
   </footer>
   <script src="../js/accordion_menu_company.js"></script>
-  <script src="../js/back_button.js">
-  </script>
 </body>
 
 </html>
