--- a/html/Company_Profile.html
+++ b/html/Company_Profile.html
@@ -17,6 +17,7 @@
     }
   </script>
   <script src="../js/jquery-3.2.1.js"></script>
+  <script src="../js/buttons_subscribe.js"></script>
 </head>
 
 <body>
