--- a/html/Company_Profile.html
+++ b/html/Company_Profile.html
@@ -34,8 +34,8 @@
         <p>3000 Brussel</p>
         <p><a href="mailto:info@kittybons.com">contact</a></p>
       </div>
-      <div class="connect_users"> <a class="subscribe_button icon_link" href="#"><i class="material-icons">favorite</i></a>
-        <p>(#subs)</p>
+      <div class="connect_users"> <a class="subscribe_button icon_link" href="#"><i class="material-icons" id="hartje">favorite</i></a>
+        <p id="number_subs">1</p>
       </div>
     </div>
     <!--    deze buttons worden accordeon-menu en panel = inhoud --------------->
