--- a/html/Profiel.html
+++ b/html/Profiel.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="/css/profiel.css">
     <meta name="viewport" content="width=device-width, initial-scale=1">
      <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,700" rel="stylesheet">
-    <script src="#"></script>
+    
 </head>
 
 <body>
@@ -20,7 +20,7 @@
 
     <div class="profielFoto">
         <img id="foto" src="/img/Placeholder.jpg" />
-        <h1 id="naam">Jan Smith</h1>
+        <h1 id="naam">Hier komt een naam</h1>
     </div>
 
 
@@ -53,6 +53,7 @@
     </footer>
 
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+    <script src="/js/profiel.js"></script>
 </body>
 
 </html>
