--- a/html/Event_Detailpage.html
+++ b/html/Event_Detailpage.html
@@ -30,7 +30,7 @@
       <div class="info_company">
         <p class="company_name_event">25 juni 2017</p>
         <p>13:00 tot 16:00</p>
-      </div> <a class="attend_link icon_link" href="#"><i class="material-icons">label_outline</i></a> </div>
+      </div> <span class="attend_link icon_link" href="#"><i class="material-icons" id="attend_label">label_outline</i><p>Join us?</p></span> </div>
     <div class="row clearfix"> <a class="icon_link" href="../html/Company_Profile.html"><i class="material-icons">location_on</i></a>
       <div class="info_company">
         <p class="company_name_event">Anderlecht Brewery</p>
@@ -39,7 +39,7 @@
         <p><a href="mailto:info@kittybons.com">contact</a></p>
       </div>
       <div class="connect_users">
-        <p>(#subs)</p> <a class="subscribe_button icon_link" href="#"><i class="material-icons">favorite</i></a> </div>
+        <span class="subscribe_button icon_link" href="#"><i class="material-icons" id="hartje">favorite_border</i></span><p class="number_subs">1</p></div>
     </div>
     <section class="event_description">Help us bottle the first batch of AnderBier. An amazing afternoon with theatre for kids and beer and lemonade for the adults. </section>
     <!--    dit wordt accordeon-menu van het event-->
