--- a/html/SearchPage.html
+++ b/html/SearchPage.html
@@ -51,7 +51,7 @@
       </div>
     </section>
     <!--_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-->
-    <section>
+    <section class="normalFilters">
       <h1>Filters</h1>
       <ul>
         <li class="notToggled" onclick="ToggleFilters(event)"> <span class="before"></span>Food &amp; Drinks</li>
