--- a/html/Event_Detailpage.html
+++ b/html/Event_Detailpage.html
@@ -13,27 +13,25 @@
   <title> Event Name Here | App Name Here</title>
   <script src="../js/jquery-3.2.1.js"></script>
   <script src="../js/buttons_subscribe.js"></script>
-  <script src="../js/event_detailpage.js"</script>
-  <script>
-    function goBack() {
-      window.history.back()
-    }
+  <script src="../js/event_detailpage.js" </script>
+    < script >
   </script>
 </head>
 
 <body>
   <header>
-    <input type="button" value="&nbsp; &lang;" onclick="goBack()"><h2>Details</h2></header>
+    <input type="button" value="&nbsp; &lang;" onclick="goBack()">
+    <h2>Details</h2></header>
   <main>
-    <div class="profielFoto"> 
+    <div class="profielFoto">
       <h1 id="naam_company">BottleMania </h1> </div>
     <div class="row clearfix"> <a class="icon_link" href="../html/calendar.html"><i class="material-icons">event</i></a>
-      <div id="data" class="info_company"></div> 
-      <span class="attend_link icon_link" href="#"><i class="material-icons" id="attend_label">label_outline</i><p>Join us?</p></span> </div>
+      <div id="data" class="info_company"></div> <span class="attend_link icon_link" href="#"><i class="material-icons" id="attend_label">label_outline</i><p>Join us?</p></span> </div>
     <div class="row clearfix"> <a class="icon_link" href="../html/Company_Profile.html"><i class="material-icons">location_on</i></a>
       <div id="plaats" class="info_company"></div>
-      <div class="connect_users">
-        <span class="subscribe_button icon_link" href="#"><i class="material-icons" id="hartje">favorite_border</i></span><p class="number_subs">1</p></div>
+      <div class="connect_users"> <span class="subscribe_button icon_link" href="#"><i class="material-icons" id="hartje">favorite_border</i></span>
+        <p class="number_subs">1</p>
+      </div>
     </div>
     <section class="event_description">Help us bottle the first batch of AnderBier. An amazing afternoon with theatre for kids and beer and lemonade for the adults. </section>
     <!--    dit wordt accordeon-menu van het event-->
