mijn dinges terug okay

--- a/html/Event_Detailpage.html
+++ b/html/Event_Detailpage.html
@@ -13,12 +13,8 @@
   <title> Event Name Here | App Name Here</title>
   <script src="../js/jquery-3.2.1.js"></script>
   <script src="../js/buttons_subscribe.js"></script>
-  <script src="../js/event_detailpage.js"</script>
-  <script>
-    function goBack() {
-      window.history.back()
-    }
-  </script>
+  <script src="../js/event_detailpage.js"></script>
+  
 </head>
 
 <body>
@@ -33,7 +29,7 @@
     <div class="row clearfix"> <a class="icon_link" href="../html/Company_Profile.html"><i class="material-icons">location_on</i></a>
       <div id="plaats" class="info_company"></div>
       <div class="connect_users">
-        <span class="subscribe_button icon_link" href="#"><i class="material-icons" id="hartje">favorite_border</i></span><p class="number_subs">1</p></div>
+        <span class="subscribe_button icon_link" href="#"><i class="material-icons hartje" >favorite_border</i></span><p class="number_subs">1</p></div>
     </div>
     <section class="event_description">Help us bottle the first batch of AnderBier. An amazing afternoon with theatre for kids and beer and lemonade for the adults. </section>
     <!--    dit wordt accordeon-menu van het event-->
