--- a/html/SearchPage.html
+++ b/html/SearchPage.html
@@ -34,22 +34,7 @@
   </side>
   <main id="content">
     <h1>Interesting venues</h1>
-    <section class="Slider">
-      <div class="SliderImg">
-        <div class=" imgInsSlider"> <img src="../img/Placeholder.jpg ">
-          <h3>Anderlecht Brewery</h3> </div>
-        <div class="imgInsSlider "> <img src="../img/Placeholder.jpg ">
-          <h3>Barbershop Jef</h3> </div>
-        <div class="imgInsSlider "> <img src="../img/Placeholder.jpg ">
-          <h3>Naaiatelier</h3> </div>
-        <div class="imgInsSlider "> <img src="../img/Placeholder.jpg ">
-          <h3>Anderlecht Brewery</h3> </div>
-        <div class="imgInsSlider "> <img src="../img/Placeholder.jpg ">
-          <h3>Barbershop Jef</h3> </div>
-        <div class="imgInsSlider "> <img src="../img/Placeholder.jpg ">
-          <h3>Naaiatelier</h3> </div>
-      </div>
-    </section>
+    <section class="Slider"> </section>
     <!--_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-->
     <section class="normalFilters">
       <h1>Filters</h1>
