--- a/calendar.html
+++ b/calendar.html
@@ -15,14 +15,15 @@
       <div class="color-layer">
         <div class="header">
           <div class="profile-container"> 
-              <img src="img/Placeholder.jpg" class="profile main"> </img>
+<!--              <img src="img/Placeholder.jpg" class="profile main"> </img> -->
           </div>
         </div>
         
         <div class="month-selection"> 
+            <span class="month">May</span>
             <a class="prev" onclick="plusSlides(-1)">&#10094;</a> 
             <a class="next" onclick="plusSlides(1)">&#10095;</a> 
-            <span class="month">May</span> </div>
+        </div>
       </div>
     </div>
     
