--- a/html/Event_Detailpage.html
+++ b/html/Event_Detailpage.html
@@ -27,7 +27,7 @@
         <div class="profielFoto">
             <h1 id="naam_company">BottleMania </h1>
         </div>
-        <div class="row clearfix"> <a class="icon_link" href="../html/calendar.html"><i class="material-icons">event</i></a>
+        <div class="row clearfix"> <a class="icon_link" href="../calendar.html"><i class="material-icons">event</i></a>
             <div id="data" class="info_company"></div> <span class="attend_link icon_link" href="#"><i class="material-icons" id="attend_label">label_outline</i><p>Join us?</p></span> </div>
         <div class="row clearfix"> <a class="icon_link" href="../html/Company_Profile.html"><i class="material-icons">location_on</i></a>
             <div id="plaats" class="info_company"></div>
@@ -127,7 +127,7 @@
                 <a href="../html/index.html"> <img src="/img/icon/home.svg" /></a>
             </li>
             <li>
-                <a href="../html/calendar.html"><img src="/img/icon/calendar.svg" /></a>
+                <a href="../calendar.html"><img src="/img/icon/calendar.svg" /></a>
             </li>
             <li>
                 <a href="../html/SearchPage.html"><img src="/img/icon/search.svg" /></a>
